--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ name = "three_adder"
 harness = false
 
 [dependencies]
+compile-time-run = "0.2.12"
 futures = "0.3"
 rumpsteak-fsm = { path = "fsm", version = "0.1", optional = true }
 rumpsteak-macros = { path = "macros", version = "0.1" }
